Refine bio copy and name consistency

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                                 overpromise and Legal teams kill momentum.
                             </p>
                             <p class="text-lg text-slate-400 mb-8 leading-relaxed">
-                                I am the bridge. I combine 10+ years of <strong>Legal Rigour</strong> with
+                                I am the bridge. I combine years of <strong>Legal Rigour</strong> with
                                 <strong>Commercial Strategy</strong>. I don't just find the partner; I structure the
                                 deal, negotiate the terms, and ensure it is commercially profitable.
                             </p>
