--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                             <h3 class="text-3xl font-bold text-white mb-4">Deal Execution</h3>
                             <p class="text-slate-400 mb-6 leading-relaxed">
                                 Partnerships often fail because Sales teams overpromise and Legal teams kill momentum.
-                                Deals die in <strong>"Legal Limbo."</strong> I combine 10+ years of Legal Rigour with
+                                Deals die in <strong>"Legal Limbo."</strong> I combine years of Legal Rigour with
                                 Commercial Strategy to bridge this gap.
                             </p>
                             <ul class="space-y-3 text-slate-300">
