--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lani Ajayi | Ecosystem-Led Growth & Deal Architecture</title>
+    <title>Lani Ajayi | Ecosystem-Led Growth & Global Market Expansion</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -109,8 +109,8 @@
                         Strategic Partnerships & Trade Architecture
                     </div>
                     <h1 class="text-5xl md:text-7xl font-bold mb-8 leading-[1.1] tracking-tight font-heading">
-                        Strategic Partners<br>
-                        <span class="gradient-text">For Ecosystem-Led Growth & Global Expansion</span>
+                        Ecosystem-Led Growth<br>
+                        <span class="gradient-text">& Global Market Expansion</span>
                     </h1>
                     <p class="text-xl text-slate-400 max-w-3xl mx-auto mb-6 leading-relaxed font-light">
                         Most scale-ups fail because of the <strong class="text-slate-200">"Sales
