Refactor About section to company focus

--- a/index.html
+++ b/index.html
@@ -287,21 +287,21 @@
                                 <!-- Icon/Placeholder for Partner -->
                                 <div
                                     class="relative rounded-2xl border-2 border-slate-700 bg-slate-900 w-full aspect-square flex items-center justify-center shadow-2xl">
-                                    <i class="fa-solid fa-user-tie text-9xl text-slate-700"></i>
+                                    <i class="fa-solid fa-building-columns text-9xl text-slate-700"></i>
                                 </div>
                             </div>
                         </div>
                         <div class="md:w-2/3">
-                            <h1 class="text-4xl md:text-5xl font-bold mb-6 font-heading">Lani Ajayi <span
-                                    class="text-brand-cyan block text-2xl mt-2 font-normal tracking-wide">DEAL
-                                    ARCHITECT</span></h1>
+                            <h1 class="text-4xl md:text-5xl font-bold mb-6 font-heading">The Strategic Advantage</h1>
                             <p class="text-xl text-slate-400 mb-6 leading-relaxed font-light">
                                 <strong>Bridging the Execution Gap.</strong> Partnerships often fail because Sales teams
                                 overpromise and Legal teams kill momentum.
                             </p>
                             <p class="text-lg text-slate-400 mb-8 leading-relaxed">
-                                I am the bridge. I combine years of <strong>Legal Rigour</strong> with
-                                <strong>Commercial Strategy</strong>. I don't just find the partner; I structure the
+                                <strong>We provide the bridge.</strong> Founded by a Lawyer and Commercial Strategist,
+                                the company
+                                combines years of <strong>Legal Rigour</strong> with
+                                <strong>Commercial Strategy</strong>. We don't just identify partners; we structure the
                                 deal, negotiate the terms, and ensure it is commercially profitable.
                             </p>
 
