--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <!-- Hero Section -->
             <header class="relative pt-20 pb-20 lg:pt-32 lg:pb-32 overflow-hidden">
                 <div class="absolute top-0 left-0 w-full h-full opacity-30 pointer-events-none">
-                    <img src="assets/hero-network.png" alt="Global Ecosystem Network"
+                    <img src="./assets/hero-network.png" alt="Global Ecosystem Network"
                         class="w-full h-full object-cover opacity-60">
                     <div
                         class="absolute top-0 right-0 w-[500px] h-[500px] bg-brand-cyan rounded-full blur-[120px] mix-blend-screen opacity-50">
@@ -291,7 +291,7 @@
                                 <!-- Icon/Placeholder for Partner -->
                                 <div
                                     class="relative rounded-2xl border-2 border-slate-700 bg-slate-900 w-full aspect-square overflow-hidden shadow-2xl group">
-                                    <img src="assets/about-bridge.png" alt="Strategic Bridge"
+                                    <img src="./assets/about-bridge.png" alt="Strategic Bridge"
                                         class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-700">
                                 </div>
                             </div>
