--- a/index.html
+++ b/index.html
@@ -210,16 +210,18 @@
                             </ul>
                         </div>
                         <div
-                            class="bg-slate-900 p-8 rounded-3xl border border-slate-800 h-full flex items-center justify-center">
-                            <i class="fa-solid fa-chess-board text-8xl text-brand-cyan/20"></i>
+                            class="bg-slate-900 rounded-3xl border border-slate-800 h-full overflow-hidden group shadow-2xl">
+                            <img src="./assets/service-strategy.png" alt="Ecosystem Strategy"
+                                class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-700 opacity-80 group-hover:opacity-100">
                         </div>
                     </div>
 
                     <!-- Pillar 2 -->
                     <div class="grid md:grid-cols-2 gap-12 mb-24 items-center">
                         <div
-                            class="order-2 md:order-1 bg-slate-900 p-8 rounded-3xl border border-slate-800 h-full flex items-center justify-center">
-                            <i class="fa-solid fa-file-signature text-8xl text-brand-green/20"></i>
+                            class="order-2 md:order-1 bg-slate-900 rounded-3xl border border-slate-800 h-full overflow-hidden group shadow-2xl">
+                            <img src="./assets/service-execution.png" alt="Deal Execution"
+                                class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-700 opacity-80 group-hover:opacity-100">
                         </div>
                         <div class="order-1 md:order-2">
                             <span class="text-brand-green font-bold tracking-widest text-xs uppercase mb-2 block">Pillar
@@ -269,8 +271,9 @@
                             </div>
                         </div>
                         <div
-                            class="bg-slate-900 p-8 rounded-3xl border border-slate-800 h-full flex items-center justify-center">
-                            <i class="fa-solid fa-globe text-8xl text-purple-500/20"></i>
+                            class="bg-slate-900 rounded-3xl border border-slate-800 h-full overflow-hidden group shadow-2xl">
+                            <img src="./assets/service-expansion.png" alt="Expansion Bridge"
+                                class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-700 opacity-80 group-hover:opacity-100">
                         </div>
                     </div>
 
