--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
     <!-- Navigation -->
     <nav class="fixed w-full z-50 bg-slate-950/80 backdrop-blur-md border-b border-slate-800">
         <div class="max-w-7xl mx-auto px-6 h-20 flex items-center justify-between">
-            <div class="text-2xl font-bold font-heading tracking-tight cursor-pointer" onclick="showPage('home')">
-                SCALABLE<span class="text-brand-cyan">GROWTH</span>
+            <div class="cursor-pointer" onclick="showPage('home')">
+                <img src="./assets/logo.png" alt="Lani Ajayi Global Consulting" class="h-12 w-auto">
             </div>
             <div class="hidden md:flex gap-8 text-sm font-medium text-slate-300 uppercase tracking-widest">
                 <button onclick="showPage('home')" id="nav-home"
