Split paragraph in Strategic Advantage section

--- a/index.html
+++ b/index.html
@@ -302,9 +302,11 @@
                                 <strong>Bridging the Execution Gap.</strong> Partnerships often fail because Sales teams
                                 overpromise and Legal teams kill momentum.
                             </p>
+                            <p class="text-lg text-slate-400 mb-4 leading-relaxed">
+                                <strong>We provide the bridge.</strong>
+                            </p>
                             <p class="text-lg text-slate-400 mb-8 leading-relaxed">
-                                <strong>We provide the bridge.</strong> Founded by a Lawyer and Commercial Strategist,
-                                the company
+                                Founded by a Lawyer and Commercial Strategist, the company
                                 combines years of <strong>Legal Rigour</strong> with
                                 <strong>Commercial Strategy</strong>. We don't just identify partners; we structure the
                                 deal, negotiate the terms, and ensure it is commercially profitable.
