Fix mobile layout overlap and add CTA to menu

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     class="hover:text-brand-cyan transition-colors">About</button>
             </div>
             <a href="mailto:cynthia.a@laniajayi.com"
-                class="bg-brand-cyan hover:bg-cyan-600 text-slate-950 font-bold py-2 px-6 rounded-full transition-all text-sm">
+                class="hidden md:block bg-brand-cyan hover:bg-cyan-600 text-slate-950 font-bold py-2 px-6 rounded-full transition-all text-sm">
                 Book Discovery Call
             </a>
         </div>
@@ -102,7 +102,11 @@
             <button onclick="showPage('services'); toggleMobileMenu()"
                 class="text-lg font-medium text-slate-300 hover:text-brand-cyan tracking-widest uppercase">Services</button>
             <button onclick="showPage('about'); toggleMobileMenu()"
-                class="text-lg font-medium text-slate-300 hover:text-brand-cyan tracking-widest uppercase">About</button>
+                class="text-lg font-medium text-slate-300 hover:text-brand-cyan tracking-widest uppercase mb-4">About</button>
+            <a href="mailto:cynthia.a@laniajayi.com" onclick="toggleMobileMenu()"
+                class="bg-brand-cyan hover:bg-cyan-600 text-slate-950 font-bold py-3 px-8 rounded-full transition-all text-sm shadow-cyan-500/20 shadow-lg">
+                Book Discovery Call
+            </a>
         </div>
     </nav>
 
